--- a/styles/hero.css
+++ b/styles/hero.css
@@ -6,7 +6,7 @@
   place-items: center;
 
   /* Setting the background image of the hero section. */
-  background-image: url('/images/hero.jpg');
+  background-image: url('../images/hero.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -57,6 +57,7 @@
   }
 
   .hero-title {
-    font-size: 2rem;
+    font-size: 1.4rem;
+    max-width: 500px;
   }
 }
