--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -14,8 +14,6 @@ body {
   top: 0;
   width: 100%;
   z-index: 1;
-
-
 }
 
 .logo {
@@ -49,11 +47,12 @@ body {
   opacity: 0.7;
 }
 
-.nav-links {
+.nav-list {
   width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  list-style: none;
 }
 
 .nav-icon {
@@ -81,13 +80,17 @@ body {
   transform: rotate(-45deg) translateY(-5.5px);
 }
 
+svg.search-icon {
+  display: inline-block;
+  float: right;
+}
 
 @media (max-width: 768px) {
   .show {
     background-color: #000000;
   }
 
-  .nav-links {
+  .nav-list {
     position: fixed;
     top: 44px;
     right: 0;
@@ -100,12 +103,12 @@ body {
       background-color 0.3s;
   }
 
-  .show .nav-links {
+  .show .nav-list {
     height: 100%;
     background-color: #000000;
   }
 
-  .nav-links a {
+  .nav-list a {
     height: 0;
     width: 0;
     opacity: 0;
@@ -115,7 +118,7 @@ body {
     transition: opacity 1.5s, height 2s;
   }
 
-  .show .nav-links a {
+  .show .nav-list a {
     opacity: 1;
     width: auto;
     height: auto;
