--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap');
+@font-face {
+  font-family: "myfont";
+  src: url('/font/wulkan-display-2-0-font/Wulkan-Display-Medium.otf') format('woff');
+}
+
+
 
 .hero-section {
   /* Centering the text in the middle of the page. */
@@ -23,17 +28,16 @@
 
 .hero-subtitle {
   font-family: 'Inter', sans-serif;
+  font-size: 1rem;
   font-weight: 600;
-  font-size: 0.8rem;
   text-transform: uppercase;
-  letter-spacing: 0.4ch;
 
   margin-bottom: 2em;
 }
 
 .hero-title {
-  font-family: 'Playfair Display', serif;
-  font-size: 2.7rem;
+  font-family: 'myfont', serif;
+  font-size: 4.6rem;
   font-weight: 300;
 
   max-width: 700px;
@@ -46,7 +50,6 @@
   font-size: .9rem;
   font-weight: 400;
   text-transform: none;
-  letter-spacing: 0.3ch;
 }
 
 
