--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ img,
 picture,
 svg {
   max-width: 100%;
-  display: block;
+  /* display: block; */
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
