--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,74 +3,71 @@
   src: url('/font/wulkan-display-2-0-font/Wulkan-Display-Medium.otf') format('woff');
 }
 
-
-
-.hero-section {
-  /* Centering the text in the middle of the page. */
-  display: grid;
-  place-items: center;
-
-  /* Setting the background image of the hero section. */
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-image: url('../images/hero.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
   height: 100vh;
 }
 
-
-.hero-text {
+.hero__text {
   color: #fff;
   text-align: center;
   padding: 3em;
 }
 
-.hero-subtitle {
+.hero__subtitle {
   font-family: 'Inter', sans-serif;
   font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
-
-  margin-bottom: 2em;
+  letter-spacing: .1ch;
+  margin-bottom: .5em;
 }
 
-.hero-title {
+.hero__title {
   font-family: 'myfont', serif;
   font-size: 4.6rem;
   font-weight: 300;
-
   max-width: 700px;
   margin: 0 auto;
   margin-bottom: 0.1em;
 }
 
-.hero-cta {
-  color: #FF8B13;
+.hero__cta {
   font-size: .9rem;
   font-weight: 400;
   text-transform: none;
 }
 
+.hero__cta:hover {
+  color: #2997ff;
+  transition: all .75s;
+}
 
-/* If the screen is less than 768px, then apply the following styles. */
+/* Media Queries */
+
 @media (max-width: 768px) {
-  .hero-subtitle {
+  .hero__subtitle {
     font-size: .5rem;
     margin-bottom: 1em;
   }
 
-  .hero-title {
-    font-size: 1.4rem;
-    max-width: 300px;
-
+  .hero__title {
+    font-size: 2rem;
+    max-width: 400px;
   }
 
-  .hero-title span {
+  .hero__title span {
     display: none;
   }
 
-  .hero-cta {
+  .hero__cta {
     letter-spacing: 0ch;
+    font-size: .7rem;
   }
 }
