--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -68,7 +68,7 @@ nav .desktop-nav li a:hover {
 }
 
 .link-search {
-    background: url('/images/search-icon.svg');
+    background: url('../images/search-icon.svg');
     display: block;
     background-position: center;
     background-size: 18px;
@@ -78,7 +78,7 @@ nav .desktop-nav li a:hover {
 }
 
 .link-bag {
-    background: url('/images/bag-icon.svg');
+    background: url('../images/bag-icon.svg');
     display: block;
     background-position: center;
     background-size: 17px;
