--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: "Inter", sans-serif;
+    font-family: "Inter", sans-serif !important;
     font-weight: 300;
     overflow-y: scroll;
 }
