--- a/styles/login.css
+++ b/styles/login.css
@@ -80,6 +80,7 @@ h6 {
 }
 
 .signin-section .text-input {
+  font-family: 'Inter', sans-serif !important;
   margin-bottom: 1.3rem;
   width: 100%;
   height: 2.7rem;
