--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-/* https://piccalil.li/blog/a-modern-css-reset */
-
 /* Box sizing rules */
 *,
 *::before,
@@ -8,10 +6,17 @@
 }
 
 /* Remove default margin */
-* {
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin: 0;
-  padding: 0;
-  font: inherit;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -25,19 +30,16 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
-html,
-body {
-  height: 100%;
-  font-family: 'Inter', sans-serif;
-  font-size: 1rem;
-}
-
 /* Set core body defaults */
 body {
+  font-family: 'Inter', sans-serif;
+  min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
 
+
+/* Removing the underline from the links and making the text white. */
 a {
   text-decoration: none;
   color: #fff;
@@ -46,14 +48,22 @@ a {
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
+
 }
 
 /* Make images easier to work with */
 img,
-picture,
-svg {
+picture {
   max-width: 100%;
-  /* display: block; */
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
