--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,313 +1,201 @@
+:root {
+  --ff-body: "Inter", sans-serif;
+  --ff-heading: "myfont", sans-serif;
+
+  --clr-primary-400: hsl(131, 20%, 26%);
+  --clr-primary-500: hsl(131, 39%, 41%);
+  --clr-neutral-900: ;
+  --clr-neutral-100: ;
+
+  --fs-xl: clamp(2rem, 12vw + 1rem, 5rem);
+  --fs-600: 2rem;
+  --fs-400: 1rem;
+  --fs-sml: 0.9rem;
+  --fs-xsml: 0.7rem;
+
+  --fw-400: 400;
+  --fw-600: 600;
+
+  --text-white: #fff;
+  --text-dark: #000;
+
+}
+
+@media (max-width: 60em) {
+  :root {
+    --fs-xl: clamp(0.9rem, 12vw + 1rem, 3rem);
+    --fs-sml: 0.7rem;
+  }
+
+}
+
 @font-face {
   font-family: "myfont";
   src: url('../font/wulkan-display-2-0-font/Wulkan-Display-Medium.otf') format('woff');
 }
 
+body {
+  color: var(--text-white);
+}
+
+/* Utilities */
+
 .container {
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
-
   padding: 100px 0;
 }
 
-.hero {
+.flex {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background-image: url('../images/hero.jpg');
+}
+
+.section__text,
+.section__title,
+.section__subtitle {
+  text-align: center;
+}
+
+.section__title {
+  font-family: var(--ff-heading);
+  font-size: var(--fs-xl);
+  font-weight: var(--fw-400);
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+.section__subtitle {
+  font-family: var(--ff-body);
+  font-size: var(--fs-sml);
+  font-weight: var(--fw-600);
+  text-transform: uppercase;
+  letter-spacing: 0.1ch;
+}
+
+/* End of Utilities */
+
+
+/* =========== SECTION ONE =========== */
+
+.section-one.hero {
+  background-image: url('../images/hero1.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   height: 100vh;
-}
 
-.hero__text {
-  color: #fff;
-  text-align: center;
-  padding: 3em;
-}
-
-.hero__subtitle {
-  font-family: 'Inter', sans-serif !important;
-  font-size: 1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: .1ch;
-  margin-bottom: .5em;
-}
-
-.hero__title {
-  font-family: 'myfont', serif !important;
-  font-size: 4.6rem;
-  font-weight: 300;
-  max-width: 700px;
-  margin: 0 auto;
-  margin-bottom: 0.1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hero__cta {
-  font-size: .9rem;
-  font-weight: 400;
-  text-transform: none;
-  vertical-align: middle;
+  font-family: var(--ff-body);
+  font-size: var(--fs-sml);
+  width: 100%;
+  max-width: 120px;
+  display: inline-block;
 }
-
-
 
 .hero__cta:hover {
-  color: #2997ff;
-  transition: all .75s;
-}
+  color: var(--clr-primary-500);
+  transition: all 0.75s;
+  text-decoration: underline;
 
-/* Media Queries */
-
-@media (max-width: 768px) {
-  .hero__subtitle {
-    font-size: .5rem;
-    margin-bottom: 1em;
-  }
-
-  .hero__title {
-    font-size: 2rem;
-    max-width: 400px;
-  }
-
-  .hero__title span {
-    display: none;
-  }
-
-  .hero__cta {
-    letter-spacing: 0ch;
-    font-size: .7rem;
-  }
 }
 
 
-/* =============  why mcis section ================= */
+/* ============= SECTION TWO ================= */
 
-.why-mcis {}
+.section-two {
+  background: var(--clr-primary-400);
+  color: var(--text-white);
+}
 
-
-section.why-mcis .content {
-  display: flex;
-  align-items: space-between;
-  /* display: grid;
-  grid-template-columns: 1fr 500px 1fr; */
+.section-two .content {
   gap: 3em;
-  min-height: 80vh;
+
 }
 
-.why-mcis .left {
-  display: flex;
+.section-two .left {
   flex-direction: column;
   justify-content: space-evenly;
   gap: 1em;
   flex: 1;
 }
 
-.why-mcis .right {
-  display: flex;
+.section-two .center {
+  flex: 1.5;
+}
+
+.section-two .right {
   flex-direction: column;
   justify-content: space-evenly;
   flex: 1;
-
-}
-
-.why-mcis .center {
-  position: relative;
-  flex: 2;
-  min-height: 700px;
-}
-
-.why-mcis .center .img-one,
-.why-mcis .center .img-two {
-  position: absolute;
-}
-
-.why-mcis .center .img-one {
-  width: 100%;
-  max-width: 300px;
-  left: 40px;
-  transform: rotate(-3deg);
-
-}
-
-.why-mcis .center .img-two {
-  width: 100%;
-  max-width: 250px;
-  transform: rotate(2deg);
-  z-index: 1;
-  right: 40px;
-  bottom: 10px;
 }
 
 
-.section__text {
-  text-align: center;
-}
-
-.section__title {
-  font-family: 'myfont', sans-serif;
-  font-weight: 400;
-  font-size: 4.5rem;
-  margin-bottom: .5em;
-}
-
-.section__subtitle {
-  font-size: 1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-
-
-@media screen and (max-width: 1300px) {
-  section.why-mcis .content {
-    display: flex;
-    align-items: space-between;
-    /* display: grid;
-    grid-template-columns: 1fr 500px 1fr; */
-    gap: 2em;
-    min-height: 80vh;
+@media (max-width: 768px) {
+  .section-two .content {
     flex-direction: column;
+    text-align: justify;
+    text-justify: inter-word;
   }
 
-  .why-mcis .center {
+  .section-two .center {
     order: 1;
   }
 
-  .why-mcis .left {
-    order: 3;
-    width: 100%;
-
-  }
-
-  .why-mcis .right {
+  .section-two .right {
     order: 2;
-    width: 100%;
-    max-width: 1200px;
-    gap: 1em;
   }
 
-  .why-mcis .center {
-    margin-bottom: 4em;
+  .section-two .left {
+    order: 3;
   }
 
-  .why-mcis .center .img-one {
-    width: 100%;
-    max-width: 400px;
-    left: 160px;
-    transform: rotate(-3deg);
-
+  .section-two .container {
+    width: 70%;
   }
 
-  .why-mcis .center .img-two {
-    width: 100%;
-    max-width: 300px;
-    transform: rotate(2deg);
-    z-index: 1;
-    right: 120px;
-    bottom: -60px;
-  }
+
 }
 
-@media screen and (max-width: 900px) {
-  .why-mcis .center .img-one {
-    width: 100%;
-    max-width: 300px;
-    left: 100px;
-    transform: rotate(-3deg);
+/* =============  END OF SECTION TWO ================= */
 
-  }
-
-  .why-mcis .center .img-two {
-    width: 100%;
-    max-width: 250px;
-    transform: rotate(2deg);
-    z-index: 1;
-    right: 120px;
-    bottom: 60px;
-  }
-
-  .why-mcis .center {
-    margin-bottom: 1em;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .why-mcis .center .img-one {
-    width: 100%;
-    max-width: 300px;
-    left: 10px;
-    transform: rotate(-3deg);
-
-  }
-
-  .why-mcis .center .img-two {
-    width: 100%;
-    max-width: 250px;
-    transform: rotate(2deg);
-    z-index: 1;
-    right: 0px;
-    bottom: 60px;
-  }
-
-  .why-mcis .center {
-    margin-bottom: 0em;
-  }
-}
-
-/* =============  ============ */
-
-.about-crabs {}
-
-
-.about-crabs.background {
-  background-image: url('../images/about-crabs-bg.jpg');
+/* ============= SECTION THREE ============ */
+.section-three {
+  background-image: url('../images/crabs.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh;
-}
+  height: 100vh;
 
-.about-crabs {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
-
-.about-crabs__text {
-  color: #fff;
-  padding: 0 3em;
-  text-align: center;
-}
-
-.about-crabs__title {
-  font-family: 'myfont', sans-serif;
-  font-weight: 400;
-  font-size: 4.75rem;
-  margin-bottom: 0.5em;
-}
-
-.about-crabs__subtitle {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-
-.about-crabs__cta {
-  font-weight: 400;
-  border: 1px solid #ccc;
+.section-three .section__cta {
+  display: block;
+  width: 100%;
+  max-width: 150px;
+  border: 1.5px solid var(--text-white);
   border-radius: 100px;
-  padding: 0.5rem 2rem;
-  transition: all 500ms ease;
+  transition: background 250ms ease-in-out;
+  letter-spacing: 1px;
+  padding: 0.75em 1.5em;
+  margin: 0 auto;
 }
 
-.about-crabs__cta:hover {
-  background-color: #fff;
-  color: black;
+.section-three .section__cta:hover {
+  background: var(--text-white);
+  color: var(--text-dark);
 }
+
+/* ==========   END OF SECTION THREE ================ */
+
+
+/* Footer */
