--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,611 +1,254 @@
-*,
-*::after,
-*::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+    --clr-primary: #1E5128;
 }
 
-body {
-    font-family: "Inter", sans-serif !important;
-    font-weight: 300;
-    overflow-y: scroll;
-}
-
-/* Desktop Nav */
-
-.nav-container {
-
-    background: rgba(0, 0, 0, 0, 0.1);
-    height: 44px;
-    z-index: 300;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-}
-
-.nav-container nav {
-    width: 1000px;
-    margin: 0 auto;
-    padding: 0 8px;
-    height: 100%;
-}
-
-nav .desktop-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-}
-
-nav .desktop-nav li a {
-    font-family: "Inter", sans-serif !important;
-    font-size: 0.8rem;
-    font-weight: 200;
-    color: #fff;
-    text-decoration: none;
-    letter-spacing: 0.1ch;
-    opacity: 0.8;
-    transition: opacity 400ms;
-}
-
-nav .desktop-nav li a:hover {
-    opacity: 1;
-}
-
-.link-logo img {
-    height: auto;
-    width: 40px;
-    padding: .5em;
-}
-
-.link-search {
-    background: url('../images/search-icon.svg');
-    display: block;
-    background-position: center;
-    background-size: 18px;
-    height: 44px;
-    width: 20px;
-    background-repeat: no-repeat;
-}
-
-.link-bag {
-    background: url('../images/bag-icon.svg');
-    display: block;
-    background-position: center;
-    background-size: 17px;
-    height: 44px;
-    width: 20px;
-    background-repeat: no-repeat;
-}
-
-.link-close {
-    background: url('/images/close-icon.svg');
-    display: block;
-    background-position: center;
-    background-size: 17px;
-    height: 44px;
-    width: 20px;
-    background-repeat: no-repeat;
-}
-
-/* Search Container */
-
-.search-container.hide {
-    opacity: 0;
-    pointer-events: none;
-}
-
-.search-container {
-    width: 60%;
-    margin: 0 auto;
-    padding: 0 42px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 200;
-}
-
-.search-container .link-search {
-    position: absolute;
-    left: 12px;
-    opacity: 0.5;
-}
-
-.search-container .link-close {
-    position: absolute;
-    top: 0;
-    right: 12px;
-    opacity: 0.5;
-    cursor: pointer;
-    transition: all 400ms;
-}
-
-.search-container .link-close:hover {
-    opacity: 0.7;
-}
-
-.search-container form {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.search-container form input {
-    width: 100%;
-    height: 44px;
-    border: 0;
-    outline: none;
-    background: transparent;
-    color: #fff;
-    font-family: "Inter", sans-serif;
-    font-size: 17px;
-}
-
-/* Overlay */
-
-.overlay.show {
-    position: fixed;
-    background: rgba(0, 0, 0, 0.48);
-    width: 100%;
-    height: 100vh;
-    left: 0;
-    top: 0;
-    z-index: 100;
-}
-
-/* Quick Links */
-
-.search-container .quick-links {
-    background: #fff;
-    position: absolute;
-    left: 0;
-    right: 0;
-    padding: 16px 8px;
-    border-radius: 0 0 16px 16px;
-}
-
-.search-container .quick-links h2 {
-    text-transform: uppercase;
-    font-size: 12px;
-    color: #6e6e73;
-    margin: 0 32px;
-    margin-top: 10px;
-}
-
-.search-container .quick-links ul {
-    list-style: none;
-    margin-top: 12px;
-}
-
-.search-container .quick-links ul li a {
-    display: inline-block;
-    width: 100%;
-    padding: 8px 50px;
-    font-size: 14px;
-    color: #1d1d1f;
-    text-decoration: none;
+.navbar-brand p {
+    font-family: "myfont", sans-serif;
     font-weight: 400;
+    font-size: 1rem;
+    color: var(--text);
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+    gap: 1em;
 }
 
-.search-container .quick-links ul li a:hover {
-    background: #f5f5f5;
-    color: #2997ff;
-}
-
-/* Desktop Nav Animation */
-
-.desktop-nav li {
-    transition: all 400ms ease;
-}
-
-.desktop-nav.hide li {
-    opacity: 0;
-    transform: scale(0.8);
-    pointer-events: none;
-}
-
-/* Overlay Animation */
-
-.overlay {
-    transition: all 400ms ease;
-}
-
-/* Navigation Menu Items Transition Delay */
-
-.desktop-nav li:nth-of-type(1),
-.desktop-nav.hide li:nth-of-type(10) {
-    transition-delay: 0ms;
-}
-
-.desktop-nav li:nth-of-type(2),
-.desktop-nav.hide li:nth-of-type(9) {
-    transition-delay: 30ms;
-}
-
-.desktop-nav li:nth-of-type(3),
-.desktop-nav.hide li:nth-of-type(8) {
-    transition-delay: 60ms;
-}
-
-.desktop-nav li:nth-of-type(4),
-.desktop-nav.hide li:nth-of-type(7) {
-    transition-delay: 90ms;
-}
-
-.desktop-nav li:nth-of-type(5),
-.desktop-nav.hide li:nth-of-type(6) {
-    transition-delay: 120ms;
-}
-
-.desktop-nav li:nth-of-type(6),
-.desktop-nav.hide li:nth-of-type(5) {
-    transition-delay: 150ms;
-}
-
-.desktop-nav li:nth-of-type(7),
-.desktop-nav.hide li:nth-of-type(4) {
-    transition-delay: 180ms;
-}
-
-.desktop-nav li:nth-of-type(8),
-.desktop-nav.hide li:nth-of-type(3) {
-    transition-delay: 210ms;
-}
-
-.desktop-nav li:nth-of-type(9),
-.desktop-nav.hide li:nth-of-type(2) {
-    transition-delay: 240ms;
-}
-
-.desktop-nav li:nth-of-type(10),
-.desktop-nav.hide li:nth-of-type(1) {
-    transition-delay: 270ms;
-}
-
-/* Search Container Animation */
-
-.search-container form,
-.search-container .link-search {
-    opacity: 1;
-    transform: translateX(0);
-    transition: all 400ms ease;
-    transition-delay: 300ms;
-}
-
-.search-container.hide form,
-.search-container.hide .link-search {
-    opacity: 0;
-    transform: translateX(50px);
-}
-
-.search-container .link-search {
-    opacity: 0.6;
-}
-
-.search-container.hide .link-close {
-    opacity: 0;
-}
-
-.search-container .link-close {
-    opacity: 0.5;
-    transition: all 400ms ease;
-    transition-delay: 400ms;
-}
-
-.search-container.hide .quick-links h2 {
-    opacity: 0;
-    transform: translateX(50px);
-}
-
-.search-container .quick-links h2 {
-    opacity: 1;
-    transform: translateX(0);
-    transition: all 400ms ease;
-    transition-delay: 100ms;
-}
-
-.search-container.hide .quick-links ul li {
-    transform: translateX(60px);
-    opacity: 0;
-}
-
-.search-container .quick-links ul li {
-    opacity: 1;
-    transform: translateX(0);
-    transition: all 400ms ease;
-}
-
-.search-container .quick-links ul li:nth-of-type(1) {
-    transition-delay: 120ms;
-}
-
-.search-container .quick-links ul li:nth-of-type(2) {
-    transition-delay: 140ms;
-}
-
-.search-container .quick-links ul li:nth-of-type(3) {
-    transition-delay: 160ms;
-}
-
-.search-container .quick-links ul li:nth-of-type(4) {
-    transition-delay: 180ms;
-}
-
-.search-container .quick-links ul li:nth-of-type(5) {
-    transition-delay: 200ms;
+#logo {
+    width: 44px;
+    height: 40px;
+    margin-right: 10px;
 }
 
 
-/* Hidden Items */
+.mobile-nav-toggle span {
+    color: var(--text);
+}
 
-.mobile-nav,
-.mobile-search-container {
+.mobile-nav-toggle {
     display: none;
 }
 
-
-/* Media Queries */
-
-@media (max-width: 1100px) {
-    .nav-container nav {
-        width: 100%;
-        padding: 0 32px;
-    }
+.nav--hidden {
+    opacity: 0;
 }
 
-@media (max-width: 768px) {
-    .nav-container .desktop-nav {
-        flex-direction: column;
+.primary-header {
+    --text: #f4f4f4;
+    --text-inverse: #333;
+    --background: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em 3em;
+    transition: all 300ms ease-in;
+    background: var(--background);
+    color: var(--text);
+}
+
+.nav__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.nav__link {
+    --spacing: 1em;
+    text-decoration: none;
+    color: inherit;
+    display: inline-block;
+    padding: calc(var(--spacing) / 2) var(--spacing);
+    position: relative;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-family: "Inter", sans-serif;
+    font-size: 0.7rem;
+}
+
+.nav__link:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: var(--spacing);
+    right: var(--spacing);
+    height: 2px;
+    background: currentColor;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    transition: -webkit-transform 150ms ease-in-out;
+    transition: transform 150ms ease-in-out;
+    transition: transform 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
+}
+
+.nav__link:hover::after {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
+.nav__link--btn {
+    border: 1.5px solid currentColor;
+    border-radius: 2em;
+    margin-left: 1em;
+    transition: background 250ms ease-in-out;
+    letter-spacing: 1px;
+    padding: 0.75em 1.5em;
+}
+
+.nav__link--btn:hover {
+    background: var(--text);
+    color: var(--text-inverse);
+    border-color: var(--text);
+}
+
+.nav__link--btn::after {
+    display: none;
+}
+
+.nav__link--btn--highlight {
+    background: var(--clr-primary);
+    border-color: var(--clr-primary);
+    color: #fff;
+}
+
+.nav__link--btn--highlight:hover {
+    background: var(--text);
+    border-color: var(--text);
+}
+
+.nav--scrolled {
+    --text: #333;
+    --text-inverse: #f4f4f4;
+    --background: #f4f4f4;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+}
+
+.home-intro {
+    padding: 50vh 0;
+    background: #123 url(//unsplash.it/900);
+    background-size: cover;
+    background-blend-mode: multiply;
+    color: white;
+    text-align: center;
+}
+
+.home-about {
+    padding: 4em 0;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.more-stuff-grid {
+    background: #f4f4f4;
+    padding: 4em 0;
+    display: grid;
+    grid-gap: 2em;
+    align-items: center;
+    grid-template-columns: minmax(1em, 1fr) repeat(2, minmax(200px, 400px)) minmax(1em, 1fr);
+}
+
+.from-left {
+    grid-column: 2 / 3;
+}
+
+.from-right {
+    grid-column: 3 / 4;
+}
+
+
+@media (max-width: 50em) {
+
+    .primary-header {
+        margin: 0;
+        padding: 2em 1em;
+    }
+
+    .primary-navigation {
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 0vh;
-        background: #000;
-        justify-content: start;
-        overflow: hidden;
-        z-index: -1;
-        transition: all 1000ms ease;
+        z-index: 1000;
+        inset: 0 0 0 30%;
 
     }
 
-    .nav-container.active .desktop-nav {
-        height: 100vh;
+    .logo {
+        width: 30px;
     }
 
-    .nav-container .desktop-nav li {
-        width: 100%;
-        padding: 0 32px;
-        opacity: 0.8;
+    .mobile-nav-toggle span {
+        color: #fff;
     }
 
-    .nav-container .desktop-nav li:hover {
+    .nav--hidden {
+        display: block;
         opacity: 1;
     }
 
-    .nav-container .desktop-nav li:first-child {
-        margin-top: 120px;
+    .nav--scrolled {
+        background: transparent !important;
+        box-shadow: none;
     }
 
-    .nav-container .desktop-nav .link-logo,
-    .nav-container .desktop-nav .link-search,
-    .nav-container .desktop-nav .link-bag {
+
+    .navbar-brand p {
         display: none;
     }
 
-    .nav-container .desktop-nav li a {
-        font-family: 'Inter', sans-serif !important;
-        padding: 16px 0;
-        display: inline-block;
-        /* border-bottom: 1px solid #616161; */
-        width: 100%;
-        font-size: 0.8rem;
-        transform: translateY(-80px);
-        opacity: 0;
-        transition: all 700ms ease;
-    }
 
-    .nav-container.active .desktop-nav li a {
-        transform: translateY(0);
-        opacity: 1;
-    }
 
-    /* Mobile Nav */
+    .primary-navigation {
 
-    nav .mobile-nav {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        list-style: none;
-    }
+        align-items: flex-start;
+        gap: 1.5em;
 
-    nav .menu-icon-container {
-        width: 20px;
-        height: 44px;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-    }
+        position: fixed;
+        z-index: 1000;
+        inset: 0 0 0 30%;
 
-    nav .menu-icon {
-        position: relative;
-        width: 100%;
-    }
+        flex-direction: column;
+        padding: min(20vh, 10rem) 2em;
 
-    nav .menu-icon .line-1,
-    nav .menu-icon .line-2 {
-        position: absolute;
-        height: 1px;
-        width: 100%;
-        background: #fff;
-        transition-property: transform, top;
-        transition-delay: 0ms, 160ms;
-        transition-duration: 200ms;
-    }
+        background: hsl(0 0% 0%/ 0.1);
+        backdrop-filter: blur(1rem);
 
-    nav .menu-icon .line-1 {
-        top: -4px;
-    }
-
-    nav .menu-icon .line-2 {
-        top: 4px;
-    }
-
-    .nav-container.active nav .menu-icon-container .menu-icon .line-1 {
-        top: 0;
-        transform: rotateZ(35deg);
-        transition-property: top, transform;
-        transition-delay: 0ms, 160ms;
-        transition-duration: 200ms;
-    }
-
-    .nav-container.active nav .menu-icon-container .menu-icon .line-2 {
-        top: 0;
-        transform: rotateZ(-35deg);
-        transition-property: top, transform;
-        transition-delay: 0ms, 160ms;
-        transition-duration: 200ms;
-    }
-
-    /* Search Box */
-
-    .mobile-search-container input {
-        width: 100%;
-        padding: 12px 36px;
-        font-family: "Inter", sans-serif;
-        font-size: 1rem;
-        background: #1b1b1b;
-        border: 0;
-        color: #fff;
-        border-radius: 8px;
-        outline: none;
-    }
-
-    .mobile-search-container {
-        position: relative;
-        padding: 0 16px;
-        margin-top: -30px;
-        /* border-bottom: 1px solid #616161; */
-        display: flex;
-        padding-bottom: 16px;
-        align-items: center;
-        transform: rotateX(90deg);
-        opacity: 0;
-        transition: all 600ms ease;
-    }
-
-    .nav-container.active .mobile-search-container {
-        transform: rotateX(0deg);
-        margin-top: 10px;
-        opacity: 1;
-    }
-
-    .mobile-search-container .link-search {
-        position: absolute;
-        left: 24px;
-        opacity: .5;
-        background-size: 15px;
-    }
-
-    /* Nav Move Up */
-
-    .nav-container nav.move-up {
-        margin-top: -40px;
-    }
-
-    /* Cancel Button */
-
-    .mobile-search-container .cancel-btn {
-        color: #2997ff;
-        font-size: 17px;
-        font-weight: 400;
-        cursor: pointer;
-        width: 0px;
-        overflow: hidden;
-        transition: all 400ms ease;
-    }
-
-    .mobile-search-container .search-bar.active+.cancel-btn {
-        padding: 0 16px;
-        width: 74px;
-    }
-
-    .mobile-search-container .search-bar {
-        flex: 1;
-    }
-
-    /* Desktop Nav Move Down */
-
-    nav .desktop-nav.move-down li:first-child {
-        margin-top: 150px;
-    }
-
-    nav .desktop-nav.move-down li {
-        opacity: 0;
-        pointer-events: none;
+        transform: translateX(100%);
+        transition: transform 600ms ease;
     }
 
 
-    /* Quick Links */
-
-    .mobile-search-container .search-bar.active~.quick-links {
-        top: 80px;
-        opacity: 1;
-        pointer-events: auto;
-        transition-delay: 40ms;
+    @supports (backdrop-filter: blur(1rem)) {
+        .primary-navigation {
+            background: hsl(0 0% 100%/ 0.1);
+            backdrop-filter: blur(1rem);
+        }
     }
 
-    .mobile-search-container .quick-links {
-        position: absolute;
-        left: 0;
-        right: 0;
-        padding: 0 32px;
-        opacity: 0;
-        pointer-events: none;
-        top: 10px;
-        transition: all 400ms ease;
-    }
-
-    .mobile-search-container .quick-links ul {
-        list-style: none;
-    }
-
-    .mobile-search-container .quick-links h2 {
-        color: #86868b;
-        font-size: 12px;
-        text-transform: uppercase;
-        font-weight: 400;
-    }
-
-    .mobile-search-container .quick-links ul li a {
-        font-family: 'Inter', sans-serif !important;
-        padding: 16px 0;
-        display: inline-block;
+    .primary-navigation a {
         text-decoration: none;
-        color: #fff;
-        font-size: 14px;
-        font-weight: 400;
-        /* border-bottom: 1px solid #616161; */
-        width: 100%;
+        color: white;
     }
 
-    .mobile-search-container .quick-links ul li a:hover {
-        color: #2997ff;
+    .primary-navigation[data-visible="true"] {
+        transform: translateY(0%);
+
     }
 
-    /* Nav Animation */
+    .mobile-nav-toggle {
+        display: block;
+        position: absolute;
+        z-index: 9999;
+        font-size: 24px;
+        aspect-ratio: 1;
+        top: 2rem;
+        right: 1rem;
 
-    .nav-container nav {
-        transition: all 400ms ease;
+        color: white;
+        background: none;
+        border: none;
     }
-}
-
-
-input,
-div,
-span,
-a {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
